Fixing layout bug - Wrong size for the month display

--- a/app/assets/stylesheets/timesheet-month.css.scss
+++ b/app/assets/stylesheets/timesheet-month.css.scss
@@ -7,9 +7,8 @@ body {
   padding: 10px;
 }
 
-.form-control {
+.current-month-field {
   text-align: center;
-  padding: 10px;
  }
 
 .weekend {
